fixing the alignment issue

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body{
 
 }
 header {
-    grid-column: span 2;
+    grid-column: span 3;
     text-align: center;
     border-bottom: 3px solid #6a40db;
     text-shadow: 3px 2px 2px #f324bf;
@@ -19,6 +19,7 @@ header {
 
 }
 nav {
+    grid-column: 1;
     padding: 30px;
     font-size: 30px;
     color: #0a0220;
@@ -48,7 +49,7 @@ ul {
     column-gap: 20px;
 }
 .know {
-    grid-area: span 3; 
+    grid-column: span 2; 
     text-align: justify;
     font-size: 20px;
     inline-size: 1000px;
@@ -98,7 +99,7 @@ h3 {
 /* switching from grid to flex box for this last page */
 .contactpage{
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr 1fr;
+    grid-template-columns: 1fr 3fr 1fr;
     grid-template-rows: 1fr 3 fr 1 fr;
     column-gap: 20px;
     align-items: center;
